--- a/mingw-w64-python-cloudpickle/PKGBUILD
+++ b/mingw-w64-python-cloudpickle/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=cloudpickle
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.0.0
+pkgver=3.1.0
 pkgrel=1
 pkgdesc='Extended pickling support for Python objects (mingw-w64)'
 arch=('any')
@@ -23,15 +23,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core")
 options=('!emptydirs')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('996d9a482c6fb4f33c1a35335cf8afd065d2a56e973270364840712d9131a882')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('81a929b6e3c7335c863c771d673d105f02efdb89dfaba0c90495d1c64796601b')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
