qt6: update to 6.8.0 - Part1
* Rebase qt6-base patches.
* Import a patch to fix qt6-base compilation.
* Remove debug package for qt6-languageserver because it now builds
  static library only without debug files.

Co-authored-by: Jan Sundermeyer <sunderme@gmx.de>

--- a/mingw-w64-qt6-base/PKGBUILD
+++ b/mingw-w64-qt6-base/PKGBUILD
@@ -4,9 +4,9 @@ _realname=qt6-base
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
-_qtver=6.7.2
+_qtver=6.8.0
 pkgver=${_qtver/-/}
-pkgrel=2
+pkgrel=1
 pkgdesc="A cross-platform application and UI framework (mingw-w64)"
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -45,6 +45,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "rsync")
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
+        https://github.com/qt/qtbase/commit/a6b350acbcbb38839f7c2f217dd1a055fe50efa7.patch
         001-appending-qt6-to-remove-qt5-conflict.patch
         002-fix-qtdocs-helpers-cmake.patch
         003-adjust-qmake-conf-mingw.patch
@@ -54,10 +55,10 @@ source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/subm
         007-Fix-crashes-in-rasterization-code-using-setjmp.patch
         009-qfileinfo-undefine-mingw-stat.patch
         010-export-some-constexpr-variables.patch
-        011-qt6-windeployqt-fixes.patch
-        https://download.qt.io/official_releases/qt/6.7/CVE-2024-39936-qtbase-6.7.patch)
-sha256sums=('c5f22a5e10fb162895ded7de0963328e7307611c688487b5d152c9ee64767599'
-            '31465d25af40e2722764d86b85b43ebc7d29844836172259b16780ec8c4ed3bd'
+        011-qt6-windeployqt-fixes.patch)
+sha256sums=('1bad481710aa27f872de6c9f72651f89a6107f0077003d0ebfcc9fd15cba3c75'
+            '4e1706e84557ff1cba7a5e15e3fd723a0858e3f7584126597351c234189d27df'
+            'b1ac154c3062ebcd96fec653d276cd4bfa2e8bc7433e97e49a6a25d7b5a6e646'
             '3848318bccdfa21a139ccdb70f8226358c4a7ed3943231494aab3df83025d7c7'
             '68156b8b7717a0ce19c4b991942469171bfa048cd5c90765115a546e65669a1d'
             'ed5b61bcb367bbda459bec903d796ea45604278f577a988d602ade07ec6bf363'
@@ -66,8 +67,7 @@ sha256sums=('c5f22a5e10fb162895ded7de0963328e7307611c688487b5d152c9ee64767599'
             '3a256533401a48aff7e3c4b02118d62a0cccc2b3566c6e550e7b467aca3e496f'
             'f4261d43a142a24e5fa3b23e25813754839db84078cc8c6dc611139bf531e64a'
             '23656a7839d7dcb763d022722d723493c847914b0639bab861ddb05d823af5b7'
-            '742a15191e618a50c1fb4b93e87dda73a2bd130a6cb829cb2026256ec2c252e4'
-            'fb23b0dfd37a9008726fee97b30fd342681943db0e4c759f5f21f01d61b9975d')
+            '742a15191e618a50c1fb4b93e87dda73a2bd130a6cb829cb2026256ec2c252e4')
 
 # Use the right mkspecs file
 if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
@@ -89,6 +89,7 @@ prepare() {
   cd $srcdir/${_pkgfn}
 
   apply_patch_with_msg \
+    a6b350acbcbb38839f7c2f217dd1a055fe50efa7.patch \
     001-appending-qt6-to-remove-qt5-conflict.patch \
     002-fix-qtdocs-helpers-cmake.patch \
     003-adjust-qmake-conf-mingw.patch \
@@ -97,8 +98,7 @@ prepare() {
     006-qt-6.2.0-dont-add-resource-files-to-qmake-libs.patch \
     007-Fix-crashes-in-rasterization-code-using-setjmp.patch \
     009-qfileinfo-undefine-mingw-stat.patch \
-    011-qt6-windeployqt-fixes.patch \
-    CVE-2024-39936-qtbase-6.7.patch
+    011-qt6-windeployqt-fixes.patch
 
   if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]]; then
     apply_patch_with_msg \
