--- a/mingw-w64-qt6-languageserver/PKGBUILD
+++ b/mingw-w64-qt6-languageserver/PKGBUILD
@@ -2,9 +2,8 @@
 
 _realname=qt6-languageserver
 pkgbase=mingw-w64-${_realname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
-_qtver=6.7.2
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
+_qtver=6.8.0
 pkgver=${_qtver/-/}
 pkgrel=1
 pkgdesc='Qt Language Server (mingw-w64)'
@@ -17,14 +16,15 @@ msys2_references=(
   "cpe: cpe:/a:qt:qt"
 )
 license=('spdx:LGPL-3.0-only WITH Qt-GPL-exception-1.0 AND BSD-3-Clause AND GFDL-1.3-no-invariants-only AND GPL-2.0-only AND GPL-3.0-only')
+depends=("${MINGW_PACKAGE_PREFIX}-qt6-base")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-qt6-base"
-             "rsync")
+             "${MINGW_PACKAGE_PREFIX}-qt6-base")
+groups=("${MINGW_PACKAGE_PREFIX}-qt6")
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz")
-sha256sums=('b659fe655144ffa061e3ae509eadb42ae373230517295a96935434340e101a92')
+sha256sums=('fbf7152c8ca4d1dbdd30205e64a830f378d7ac5ac0b5f02eecab9d7501065cef')
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
@@ -40,35 +40,9 @@ build() {
   ${MINGW_PREFIX}/bin/cmake --build .
 }
 
-package_qt6-languageserver() {
-  depends=("${MINGW_PACKAGE_PREFIX}-qt6-base")
-  groups=("${MINGW_PACKAGE_PREFIX}-qt6")
-
+package() {
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install build-${MSYSTEM}
-
-  # Seperate debug-info files
-  rsync -armR --remove-source-files --include="*/" --include="*.debug" --exclude="*" --prune-empty-dirs ${pkgdir}/.${MINGW_PREFIX} ${srcdir}/${MSYSTEM}-debug/
 
   install -d "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
   install -Dm644 $_pkgfn/LICENSES/* -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
 }
-
-package_qt6-languageserver-debug() {
-  depends=("${MINGW_PACKAGE_PREFIX}-qt6-base-debug"
-           "${MINGW_PACKAGE_PREFIX}-${_realname}")
-  groups=("${MINGW_PACKAGE_PREFIX}-qt6-debug")
-  options=('!strip')
-
-  cp -rf ${srcdir}/${MSYSTEM}-debug${MINGW_PREFIX} "${pkgdir}"/
-}
-
-# template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
-# vim: set ft=bash :
-
-# generate wrappers
-for _name in "${pkgname[@]}"; do
-  _short="package_${_name#${MINGW_PACKAGE_PREFIX}-}"
-  _func="$(declare -f "${_short}")"
-  eval "${_func/#${_short}/package_${_name}}"
-done
-# template end;
