--- a/mingw-w64-mdbook-pikchr/PKGBUILD
+++ b/mingw-w64-mdbook-pikchr/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=mdbook-pikchr
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.1.7
+pkgver=0.1.8
 pkgrel=1
-pkgdesc="A mdbook preprocessor to render pikchr code blocks as images in your book (mingw-w64)"
+pkgdesc='A mdbook preprocessor to render pikchr code blocks as images in your book (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/podsvirov/mdbook-pikchr"
+url='https://crates.io/crates/mdbook-pikchr'
+msys2_repository_url='https://github.com/podsvirov/mdbook-pikchr'
 msys2_references=(
   'aur: mdbook-pikchr'
   'purl: pkg:cargo/mdbook-pikchr'
@@ -16,15 +17,14 @@ msys2_references=(
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-mdbook")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
-source=("${_realname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz")
-sha256sums=('e3f1bcba19db94fa66ea12152e7082de0e1ad6171b1fd6638f2b65a9cfbb5b60')
+source=("${_realname}-${pkgver}.tar.gz::${msys2_repository_url}/archive/v${pkgver}.tar.gz")
+sha256sums=('29a411a5db215919ad75f49fd9c4695997e5a74921ce540872b7b99b88d46f60')
 
 prepare() {
   cp -r "${_realname}-${pkgver}" "build-${MSYSTEM}"
   cd "${srcdir}/build-${MSYSTEM}"
 
-  sed -e "s/https:\/\/raw.githubusercontent.com\/podsvirov\/mdbook-pikchr\/master\///" -i README.md
-  sed -e "s/debug/release/" -i book.toml
+  sed -e "s/https:\/\/raw.githubusercontent.com\/podsvirov\/mdbook-pikchr\/master\/docs\///" -i docs/README.md
 
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
@@ -38,14 +38,7 @@ build() {
     --frozen
 
   msg "Build documentation"
-
   "${MINGW_PREFIX}/bin/mdbook.exe" build
-  cd book
-  rm -rf target src
-  rm -f book.toml Cargo.lock Cargo.toml \
-    build.rs LICENSE Makefile \
-    .gitignore .nojekyll \
-    Dockerfile
 }
 
 check() {
