--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.157.5
+pkgver=0.158.1
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -20,12 +20,11 @@ msys2_references=(
   'gentoo: app-editors/zed'
 )
 depends=(#"${MINGW_PACKAGE_PREFIX}-libgit2"
-         "${MINGW_PACKAGE_PREFIX}-curl"
-         "${MINGW_PACKAGE_PREFIX}-zstd"
-         'unzip')
+         "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
+             "${MINGW_PACKAGE_PREFIX}-protobuf"
              "${MINGW_PACKAGE_PREFIX}-fontconfig"
              "${MINGW_PACKAGE_PREFIX}-openssl"
              #"${MINGW_PACKAGE_PREFIX}-sqlite3"
@@ -33,21 +32,17 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              'git')
 options=('!lto')
 optdepends=("${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
-            "${MINGW_PACKAGE_PREFIX}-clang: for a better C/C++ language support"
+            "${MINGW_PACKAGE_PREFIX}-clang-tools-extra: for a better C/C++ language support"
             "${MINGW_PACKAGE_PREFIX}-rust-analyzer: for a better Rust language support")
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
-        "curl-sys.tar.gz::https://crates.io/api/v1/crates/curl-sys/0.4.74+curl-8.9.0/download"
         "zed-download-pc-windows-gnu-assets.patch"
         "zed-dont-vendor-cargo-about.patch"
-        "curl-sys-use-pkgconfig.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('c0d614b9f2c517c04815f054a96cf78a12bad567d962ec43e1739d467ee7a64b'
+sha256sums=('4bab2b93de2fee6b1994a636c3e4796042f6e650cb8fb3be09c1dec7826d70cc'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
-            '8af10b986114528fcdc4b63b6f5f021b7057618411046a4de2ba0f0149a097bf'
-            '94ca0bc7ae6f73bc4cdb9dd02af2946541b2bee7c71f279a4eeef1f987e76fe4'
+            '5cbf1cb9c1e3436f8db242b74da519d12542dd94f720be4a8c1ece7cb54c849d'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
-            '0e008fc69c67a5e79b05815625ffcef2d008e6b5a4bb0350c90772c49d2ca748'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
@@ -60,17 +55,15 @@ prepare() {
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # link system deps dynamically
-  patch -d "../curl-sys-0.4.74+curl-8.9.0" -i "../curl-sys-use-pkgconfig.patch"
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
   # use patched *-sys crates
   cat >> Cargo.toml <<END
 
 [patch.crates-io]
-curl-sys = { path = "../curl-sys-0.4.74+curl-8.9.0" }
 zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }
 END
 
-  cargo update -p curl-sys -p zstd-sys
+  cargo update -p zstd-sys
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
   # generate license for whole Zed contents
   sh script/generate-licenses
@@ -79,6 +72,8 @@ END
 build() {
   cd "${_realname}"
 
+  export PROTOC="${MINGW_PREFIX}/bin/protoc.exe"
+  export PROTOC_INCLUDE="${MINGW_PREFIX}/include"
   export OPENSSL_NO_VENDOR=1
   #export LIBGIT2_NO_VENDOR=1
   export PKG_CONFIG_ALL_DYNAMIC=1
