--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=25.0.2
+pkgver=26.0.0
 pkgrel=1
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
@@ -24,7 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.9+zstd.1.5.5/download"
         "zstd-sys-remove-statik.patch")
-sha256sums=('cd57d42b4e3108b11ad6d509390059d080be2fbbe06f009228b2a79dea83abfc'
+sha256sums=('7a2060c60666320882145d9e9dc607913bd1987078d635357d9c7af86fb196f6'
             '9e16efa8a874a0481a574084d34cc26fdb3b99627480f785888deb6386506656'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
@@ -85,14 +85,13 @@ build() {
     -p wasmtime-cli \
     --manifest-path "${_realname}/Cargo.toml"
 
-  cd "${srcdir}/${_realname}/docs"
-  mdbook build
+  mdbook build "${_realname}/docs"
 }
 
 check() {
   cd "${_realname}"
 
-  cargo test --frozen --profile fastest-runtime
+  cargo test --frozen --profile fastest-runtime -p wasmtime-cli
 }
 
 package_wasmtime() {
@@ -112,6 +111,7 @@ package_wasmtime() {
 package_libwasmtime() {
   pkgdesc+=' (C-API)'
   conflicts=("${MINGW_PACKAGE_PREFIX}-libwasmer")
+  options=('!strip')
 
   DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-static"
   DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-shared"
@@ -127,10 +127,8 @@ package_wasmtime-docs() {
   pkgdesc+=" (Documentation)"
   depends=()
 
-  cd "${_realname}"
-
   install -d "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/"
-  cp -r -t "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/" docs/book/*
+  cp -r -t "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/" "${_realname}"/docs/book/*
 }
 
 # vim: set ft=bash :
