--- a/mingw-w64-swi-prolog/PKGBUILD
+++ b/mingw-w64-swi-prolog/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=swi-prolog
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-full" "${MINGW_PACKAGE_PREFIX}-${_realname}-core" "${MINGW_PACKAGE_PREFIX}-${_realname}-packages" "${MINGW_PACKAGE_PREFIX}-${_realname}-archive" "${MINGW_PACKAGE_PREFIX}-${_realname}-bdb" "${MINGW_PACKAGE_PREFIX}-${_realname}-pcre2" "${MINGW_PACKAGE_PREFIX}-${_realname}-yaml" "${MINGW_PACKAGE_PREFIX}-${_realname}-ssl" "${MINGW_PACKAGE_PREFIX}-${_realname}-x" "${MINGW_PACKAGE_PREFIX}-${_realname}-python" "${MINGW_PACKAGE_PREFIX}-${_realname}-doc" "${MINGW_PACKAGE_PREFIX}-${_realname}-examples" "${MINGW_PACKAGE_PREFIX}-${_realname}-tests")
-pkgver=9.2.7
+pkgver=9.2.8
 pkgrel=1
 pkgdesc="Prolog environment (mingw-w64)"
 arch=(any)
@@ -29,16 +29,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-openjpeg2"
              "${MINGW_PACKAGE_PREFIX}-python")
 source=("https://www.swi-prolog.org/download/stable/src/swipl-${pkgver}.tar.gz"
-        "01-console-add-stdbool.patch"
-        "02-xpce-create-fix-declaration.patch")
-sha256sums=('fd4126f047e0784112741a874e2f7f8c68b5edd6426ded621df355c62d18c96f'
-            '7cb0be1a42477546bee0619ed61404679276f5bb97fd825222f1386c7b55a35a'
-            '944e794f05b1643b4109016b79d0fcff8195f9a79abc08642491779ba56148fb')
+        "01-mqi-specify-encoding.patch")
+sha256sums=('b331637a57c913c49edcfcb10ddcf6c031278ce93d2411d54542778531abb5c7'
+            'b1e2341590c46d3bcc2e4b7ad85645a91a5979d7aa6ad39e6899c9c3fbdf2f94')
 
 prepare() {
   cd ${srcdir}/swipl-${pkgver}
-  patch -p1 < ${srcdir}/01-console-add-stdbool.patch
-  patch -p1 < ${srcdir}/02-xpce-create-fix-declaration.patch
+  patch -p1 < ${srcdir}/01-mqi-specify-encoding.patch
 }
 
 build() {
