--- a/mingw-w64-pyside6/PKGBUILD
+++ b/mingw-w64-pyside6/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=mingw-w64-${_realname}
 pkgname=(${MINGW_PACKAGE_PREFIX}-shiboken6
          ${MINGW_PACKAGE_PREFIX}-${_realname}
          ${MINGW_PACKAGE_PREFIX}-${_realname}-tools)
-pkgver=6.7.1
-pkgrel=2
+pkgver=6.8.0.2
+pkgrel=1
 pkgdesc="Enables the use of Qt6 APIs in Python applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -52,21 +52,28 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-webchannel"
              "${MINGW_PACKAGE_PREFIX}-qt6-websockets"
              "${MINGW_PACKAGE_PREFIX}-vulkan-headers")
-_pkgfn=pyside-setup-everywhere-src-$pkgver
+_pkgfn=pyside-setup-everywhere-src-${pkgver%.*}
 source=(https://download.qt.io/official_releases/QtForPython/pyside6/PySide6-$pkgver-src/${_pkgfn}.tar.xz
-        "shiboken-add-missing-include.patch::https://code.qt.io/cgit/pyside/pyside-setup.git/patch/?id=19056ca1f47d87d995f548a7b3888c0a6282335a"
         001-fix-building-on-mingw.patch
         002-fix-build-qtexampleicons.patch)
-sha256sums=('6f33de37f4121e547064023edb344b95e2ab454234fa8fce27ea73df96f933cd'
-            '7940104798f820a9940c93955e4b03d16e38983b3898a8714ed6d80d52e6cfdf'
+sha256sums=('1a1a219a8f327e340d258275fad3a9f261b8f04bc57041747e73dd6ad252b4e1'
             '5f71b618e0ad687e9282fa4b8c3815beaf69b78666516bfce57cb039822f4ac6'
             'ad762d906e5e736b87e8fe92efd42045fe51206e6b6845e37d298a15a53ccfa3')
 
+# Helper macros to help make tasks easier #
+apply_patch_with_msg() {
+  for _fname in "$@"
+  do
+    msg2 "Applying ${_fname}"
+    patch -Nbp1 -i "${srcdir}"/${_fname}
+  done
+}
+
 prepare() {
   cd "${srcdir}"/${_pkgfn}
-  patch -p1 -i "${srcdir}"/shiboken-add-missing-include.patch
-  patch -p1 -i "${srcdir}"/001-fix-building-on-mingw.patch
-  patch -p1 -i "${srcdir}"/002-fix-build-qtexampleicons.patch
+  apply_patch_with_msg \
+    001-fix-building-on-mingw.patch \
+    002-fix-build-qtexampleicons.patch
 }
 
 build() {
