--- a/mingw-w64-projectchrono/PKGBUILD
+++ b/mingw-w64-projectchrono/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=9.0.1
 _mjver=2.7.9
-pkgrel=2
+pkgrel=3
 pkgdesc='High-performance C++ library for multiphysics and multibody dynamics simulations (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -16,6 +16,9 @@ msys2_repository_url='https://github.com/projectchrono/chrono'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-eigen3"
          "${MINGW_PACKAGE_PREFIX}-irrlicht"
+         "${MINGW_PACKAGE_PREFIX}-glm"
+         "${MINGW_PACKAGE_PREFIX}-glew"
+         "${MINGW_PACKAGE_PREFIX}-glfw"
          "${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
@@ -28,13 +31,15 @@ source=("${msys2_repository_url}/archive/${pkgver}/${_basename}-${pkgver}.tar.gz
         '0001-chrono-9.0.1-fix-build.patch'
         '0002-chrono-9.0.1-not-install-irrlicht.patch'
         '0003-chrono-9.0.1-fix-python.patch'
-        '0004-chrono-9.0.1-local-mathjax.patch')
+        '0004-chrono-9.0.1-local-mathjax.patch'
+        '0005-chrono-9.0.1-not-install-glew-and-glfw.patch')
 sha256sums=('86da726ed3e3bacf682666b21d9c95dc87746b026dbafc722051a3202b822d39'
             'c9167279c87da044f2ff910ad573a02ce90354cb59440ae568eb86e1630f65df'
             '22e6a9521e790eee407551202418d4332068e95022c1bd8c8c5dd3eca2035e78'
             '5c5f70d2c134fc90f52484f36e84464f7e040e483a09cc81a425ff2589377477'
             '2874a51c3cdb3848440e47b37b8d94624a90f59e10a97ae96d3378707aa942cc'
-            '230a216716facc7d0633b175b968a419816ca72b9225ac07613d6278216ae41f')
+            '230a216716facc7d0633b175b968a419816ca72b9225ac07613d6278216ae41f'
+            '1a4a34516b1667eb219ee17f15ac8359348874956a3f2094d70668f0cc0d573c')
 
 prepare() {
   cd "${_basename}-${pkgver}"
@@ -43,6 +48,7 @@ prepare() {
   patch -Np1 -i "${srcdir}"/0002-chrono-9.0.1-not-install-irrlicht.patch
   patch -Np1 -i "${srcdir}"/0003-chrono-9.0.1-fix-python.patch
   patch -Np1 -i "${srcdir}"/0004-chrono-9.0.1-local-mathjax.patch
+  patch -Np1 -i "${srcdir}"/0005-chrono-9.0.1-not-install-glew-and-glfw.patch
 }
 
 build() {
@@ -60,6 +66,7 @@ build() {
       "${extra_config[@]}" \
       -DBUILD_{SHARED,STATIC}_LIBS=ON \
       -DENABLE_MODULE_IRRLICHT=ON \
+      -DENABLE_MODULE_OPENGL=ON \
       -DENABLE_MODULE_PYTHON=ON \
       -DIRRLICHT_INSTALL_DIR="${MINGW_PREFIX}" \
       -DBUILD_TESTING=ON \
