--- a/mingw-w64-openpgl/PKGBUILD
+++ b/mingw-w64-openpgl/PKGBUILD
@@ -3,13 +3,13 @@
 _realname=openpgl
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.6.0
+pkgver=0.7.0
 pkgrel=1
 pkgdesc="Intel(R) Open Path Guiding Library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='http://www.openpgl.org/'
-msys2_repository_url="https://github.com/OpenPathGuidingLibrary/openpgl"
+msys2_repository_url="https://github.com/RenderKit/openpgl"
 msys2_references=(
   'archlinux: openpgl'
 )
@@ -19,14 +19,14 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("https://github.com/OpenPathGuidingLibrary/openpgl/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
+source=("https://github.com/RenderKit/openpgl/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         001-add-compile-flags.patch
         002-Fix-finding-TBB.patch
         003-Fix-building-on-mingw-w64-aarch64.patch)
-sha256sums=('4192a4096ee3e3d31878cd013f8de23418c8037c576537551f946c4811931c5e'
-            '27f9b0767f1356224783b87f888e4a91d6e64774f733cab68d813d227fb675c6'
+sha256sums=('58be6ac86e3bcf8a787e9c1332d1527e6d18f4b1403b96bb02c909e20af2ca94'
+            'eab367b079ca1489c08b46bef6f441d52630dece7c3bf8ac5b703ba2bc30b0a0'
             '6703e4dd3f06dfd2d9f28a9d7cb727c9476d231f662fd676883d42a61873aa0f'
-            'cbc8a4d388392601aea6e2a4e50a3afa5f0c8b785ac37a05c6379453c18f4797')
+            'cca09ab79db692f91789cd643b8e3787abd53fe567da86afcf526dfa25108032')
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
