--- a/mingw-w64-rtl-sdr/PKGBUILD
+++ b/mingw-w64-rtl-sdr/PKGBUILD
@@ -1,25 +1,25 @@
 _realname=rtl-sdr
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.0.1
+pkgver=2.0.2
 pkgrel=1
 pkgdesc="Driver for Realtek RTL2832U, allowing general purpose software defined radio (SDR) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+msys2_repository_url='https://gitea.osmocom.org/sdr/rtl-sdr/'
 url="https://osmocom.org/projects/rtl-sdr/wiki"
-license=('GPL')
+license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-libusb>=1.0"
          "${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("rtl-sdr.$pkgver.tgz::https://gitea.osmocom.org/sdr/rtl-sdr/archive/v$pkgver.tar.gz")
-sha512sums=('ae481780ed6d084c8fa367c19c1d87007e4d4bf91f183e8e243924aa0369b386f7628f806af74f048978591549c7aeb40e6a5036840ddf52d7008f69edce9271')
+# https://gitea.osmocom.org/sdr/rtl-sdr/archive/v$pkgver.tar.gz
+source=("${_realname}-${pkgver}.tar.gz::https://github.com/osmocom/rtl-sdr/archive/refs/tags/v${pkgver}.tar.gz")
+sha512sums=('20a1630df7d4da5d263c5ffd4d83a7c2a6fc674e3838bf02b2b59c1da8d946dafc48790d410ab2fcbc0362c2ac70e5cdcae9391c5f04803bf2cdddafd6f58483')
 
 build() {
-  cd "$srcdir/$_realname"
-
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   declare -a extra_config
@@ -35,7 +35,7 @@ build() {
       -DDETACH_KERNEL_DRIVER=ON -Wno-dev \
       "${extra_config[@]}" \
       -GNinja \
-      ../$_realname
+      ../${_realname}-${pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
 }
@@ -44,4 +44,11 @@ package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
+
+  # remove path reference in cmake
+  local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
+  for _f in "${pkgdir}${MINGW_PREFIX}"/lib/cmake/${_realname/-/}/*.cmake; do
+    sed -e "s|${PREFIX_WIN}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
+    sed -e "s|${MINGW_PREFIX}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
+  done
 }
