--- a/mingw-w64-p11-kit/PKGBUILD
+++ b/mingw-w64-p11-kit/PKGBUILD
@@ -6,7 +6,7 @@ _realname=p11-kit
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.25.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Library to work with PKCS#11 modules (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -37,7 +37,8 @@ source=(https://github.com/p11-glue/p11-kit/releases/download/${pkgver}/${_realn
         0011-p11-kit-spawn-external.patch
         0012-no-version-script.patch
         0013-fix-reallocarray-decl.patch
-        0014-fix-configure.patch)
+        0014-fix-configure.patch
+        proxy.patch)
 validpgpkeys=('C0F67099B808FB063E2C81117BFB1108D92765AF'  # Stef Walter <stef@thewalter.net>
               '462225C3B46F34879FC8496CD605848ED7E69871'  # Daiki Ueno <ueno@unixuser.org>
               '5D46CB0F763405A7053556F47A75A648B3F9220C'  # Zoltan Fridrich <zfridric@redhat.com>
@@ -54,7 +55,8 @@ sha256sums=('04d0a86450cdb1be018f26af6699857171a188ac6d5b8c90786a60854e1198e5'
             '3c4821c36f76fd45c0d1ec83474773e45ccefde4ac92ca88b8493425f7553cb9'
             '15a2729f39e260f7fe8d55a91a399f2512854da626a69bc215470f902fc178cd'
             '83ecf11aaf9a1c6f617790048e80febd7320edae6ba203958349264170956911'
-            '9b4831e585e4145f69fef34b371763e959587c23128167cd995c006cb9e1e0c2')
+            '9b4831e585e4145f69fef34b371763e959587c23128167cd995c006cb9e1e0c2'
+            'e2568ffd96d68046525a37b9e95fbfbcae14fa1033c9dfe5382d9879b2906e4e')
 
 prepare() {
   test ! -d "${startdir}/../mingw-w64-pathtools" || {
@@ -74,6 +76,7 @@ prepare() {
   patch -p1 -i ${srcdir}/0012-no-version-script.patch
   patch -p1 -i ${srcdir}/0013-fix-reallocarray-decl.patch
   patch -p1 -i ${srcdir}/0014-fix-configure.patch
+  patch -p1 -i ${srcdir}/proxy.patch
 
   autoreconf -vfi
   gtkdocize
