--- a/mingw-w64-godot/PKGBUILD
+++ b/mingw-w64-godot/PKGBUILD
@@ -17,7 +17,7 @@ license=('spdx:MIT')
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 makedepends=("make"
-             "${MINGW_PACKAGE_PREFIX}-gcc"
+             "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-scons")
 depends=("${MINGW_PACKAGE_PREFIX}-brotli"
