--- a/mingw-w64-freecad/PKGBUILD
+++ b/mingw-w64-freecad/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=freecad
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.0rc2
-pkgrel=5
+pkgver=1.0.0
+pkgrel=1
 _OS_commit=91f70382
 pkgdesc="Free and Opensource multiplatform 3D parametric modeler (mingw-w64)"
 arch=('any')
